# pass_gen

./: .gitignore  Cargo.toml  README  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
